# tenx_ws

./: .gitignore  README.md
src/maps/: map.pgm
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: params.yaml
src/navigation/include/navigation/: types.hpp
src/navigation/include/navigation/controller/: base_controller.hpp  pure_pursuit_controller.hpp
src/navigation/include/navigation/path_smoother/: base_smoother.hpp  savgol_smoother.hpp  simple_smoother.hpp
src/navigation/include/navigation/trajectory_generator/: trajectory_generator.hpp
src/navigation/launch/: gazebo_simple.launch.py  gazebo_turtlebot.launch.py  minimal_test.launch.py  path_tracking.launch.py  turtlebot3_world_fixed.launch.py
src/navigation/scripts/: install_gazebo_classic.sh  spawn_turtlebot.py  switch_to_classic_gazebo.sh
src/navigation/src/: path_tracking_node.cpp
src/navigation/src/controller/: pure_pursuit_controller.cpp
src/navigation/src/path_smoother/: savgol_smoother.cpp  simple_smoother.cpp
src/navigation/src/trajectory_generator/: trajectory_generator.cpp
src/scripts/: waypoints.sh
